# GNNs-From-Scratch

./: CMakeLists.txt  C__CUDA_LIBRARY_USAGE.md  LIBRARY_SETUP.md  MANIFEST.in  README.md  setup.py
C++/: GNN.cpp  GNN.h  GraphAlgorithms.cpp  LinearRegression.cpp  LinearRegression.h  NeuralNetwork.cpp  NeuralNetwork.h
CUDA/: GNN.cu  GNN.h  LinearRegression.cu  LinearRegression.h  Makefile  NeuralNetwork.cu  NeuralNetwork.h  gnn_demo.cu
CUDA/Common/: MatrixOps.cu  MatrixOps.h  Utils.cu  Utils.h
CUDA/Examples/: linear_regression_demo.cu  neural_network_demo.cu
Python/: GraphAlgorithms.py  LinearRegression.py  __init__.py  test_data_nn.csv
examples/: basic_usage_example.py  cpp_library_example.cpp  train_data_nn.csv
gnns_ml/: GNN.py  GraphAlgorithms.py  NeuralNetwork.py  __init__.py
